# leaf-segmentation-unet

./: .gitignore  main.py  predict.py  predict_vegann.py  pyproject.toml  train.py  train_vegann.py
model/pretrained/: download.md
